# ts-ctypes

./: .gitignore  c_cpp_parser.c  meson.build  meson_options.txt  types_parser.c  types_parser.h  types_storage.c
subprojects/: tree-sitter-cpp.wrap
subprojects/packagefiles/tree-sitter-cpp/: meson.build
test/: b1.h  defines.h  e1.h  e2.h  e3.h  e4.h  e5.h  include.h  s5.h  s6.h  s7.h  s8.h  s9.h  ts-crash.h  u1.h
